--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -846,8 +846,8 @@ a.playlist_expander{
 }
 .navbar-brand{
 	float:none;
-  width: 2000px
-  height: 1057px
+  width: 2000px;
+  height: 1057px;
 }
 .navbar-nav{
 	margin-top:10px;
