--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,11 @@
 /*
-Theme Name: Poison
-Theme URI: http://xvelopers.com/
+Theme Name: plus_Sugar
+Theme URI:
 Description: one Page HTML5 Theme suitable for music bands
 Version: 1.0
-Author: xvelopers
-Author URI: http://xvelopers.com/
+Author: takoagemat
+Author :/
+2020.01.28 I modified +sugar.
 */
 
 /* 	Table Of Content
@@ -135,7 +136,7 @@ h4 { font-size: 40px; }
 h5 { font-size: 30px; }
 h6 { font-size: 22px; }
 img {
-	max-width: 100%;
+	max-width:100%;
 	height: auto;
 }
 h2:after {
@@ -2634,3 +2635,10 @@ ul.profile li h6, ul.message li h6{
         display: none ;
     }
 }
+/*
+2020.01.28 I modified +sugar.
+It is a important difference in hers.
+Yamaguchi Momotan - AlbaNox Harukun
+If you're looking for justice, play a different game.
+I wrote this code, for my ***friend Sayaka.
+*/
