--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -601,7 +601,7 @@ a.playlist_expander{
 .banner h4 { color: #91caf5; }
 .banner h1 { color: #fff; }
 .fraction_wrapper{
-	background: url(../img/BG/bodyBG.jpg) center center #161616;
+	background: url(../img/BG/bodyBG.jpg) center center #FFF;
 	padding-top:0;
 	position:relative;
 	padding-bottom:65px;
