--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,7 +101,7 @@ body {
 =============================*/
 
 .sections_wrapper{
-	background: url(../img/BG/bodyBG.jpg) center center #FFF;
+	background: url(../img/white.jpg) center center #161616;
 }
 .boxed_in{
 	max-width:1200px;
@@ -601,7 +601,7 @@ a.playlist_expander{
 .banner h4 { color: #91caf5; }
 .banner h1 { color: #fff; }
 .fraction_wrapper{
-	background: url(../img/BG/bodyBG.jpg) center center #FFF;
+	background: url(../img/white.jpg) center center #161616;
 	padding-top:0;
 	position:relative;
 	padding-bottom:65px;
@@ -2635,141 +2635,6 @@ ul.profile li h6, ul.message li h6{
         display: none ;
     }
 }
-
-
-
-
-/* ------------------------------------
- * Movie
- * ------------------------------------ */
-
-
- #story .player {
-     width: 60%;
-     margin: 0;
-     padding-top: 38%;
- }
-
-
- @media screen and (max-width: 767px) {
- #story .player {
- 	width: 100%;
- 	margin: 0 auto;
- 	padding-top: 56.25%;
- }
- }
-
- @media screen and (max-width: 767px) {
- 	.player {
- 		width: 100%;
- 		margin: 0 auto;
- 		padding-top: 56.25%;
- }
- 	video {
- 		width: 100%;
- 		margin: 0 auto;
- 	}
- }
-
-
-.player {
-	position: relative;
-	width: 94%;
-	margin: 0 auto;
-	padding-top: 56.25%;
-}
-.player iframe,
-.player > div {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 100% !important;
-	height: 100% !important;
-}
-video {
-	display: block;
-	width: 60%;
-	margin: 0;
-}
-
-
-/* ------------------------------------
- * MOVIE
- * ------------------------------------ */
-
-#movie {
-	background:  url(../img/home/bg_movie.png) no-repeat right bottom;
-}
-#movie .movieBox {
-	zoom:1;
-	overflow: hidden;
-	width: 100%;
-	margin: 0 auto;
-}
-#movie .movieBox li {
-	width: 50%;
-	margin-bottom: 2%;
-	float: left;
-}
-
-@media screen and (max-width: 767px) {
-	#movie {
-		background-size: 300px auto;
-		-webkit-background-size: 300px auto;
-		-moz-background-size: 300px auto;
-	}
-	#movie .movieBox li {
-		width: 100%;
-		margin-left: 0;
-		float: none;
-	}
-}
-
-
-.contentBox .inner {
-	width: 1000px;
-	margin: 0 auto;
-	zoom:1;
-}
-
-@media screen and (max-width: 1000px) {
-	.contentBox .inner {
-		width: 96%;
-	}
-}
-
-@media screen and (max-width: 767px) {
-	.contentBox .inner {
-		width: 100%;
-	}
-}
-
-
-
-/* ------------------------------------
- * LINE
- * ------------------------------------ */
-
-.line01 {
-	position: relative;
-}
-.line01:before {
-	content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-	width: 100%;
-	height: 4px;
-	background: #75bfea; /* Old browsers */
-	background: -webkit-linear-gradient(left, #75bfea 0%, #8d83b9 20%, #e9a0bf 40%, #ee9b79 60%, #f9ee7e 80%, #8cc691 100%);
-	background: -o-linear-gradient(left, #75bfea 0%, #8d83b9 20%, #e9a0bf 40%, #ee9b79 60%, #f9ee7e 80%, #8cc691 100%);
-	background: linear-gradient(to right, #75bfea 0%, #8d83b9 20%, #e9a0bf 40%, #ee9b79 60%, #f9ee7e 80%, #8cc691 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75bfea', endColorstr='#8cc691',GradientType=1 );
-}
-
-
-
 /*
 2020.01.28 I modified +sugar.
 It is a important difference in hers.
