--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1866,6 +1866,8 @@ ul.music_widget > li{
 	}
 }
 
+.video-container {margin: 0px auto;}
+
 /*====================================
 20-Footer
 ===================================*/
