--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1860,9 +1860,9 @@ ul.music_widget > li{
 		-moz-background-size: 300px auto;
 	}
 	#movie .movieBox li {
-		width: 100%;
+		width: 30%;
 		margin-left: 0;
-		float: none;
+		float: left;
 	}
 }
 
