--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ Version: 1.0
 Author: takoagemat
 Author :/
 2020.01.28 I modified +sugar.
+2020.12.20 I modified +sugar.
 */
 
 /* 	Table Of Content
