--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2677,8 +2677,20 @@ Movie
 	float: left;
 }
 
+.movie-wrap {
+     position: relative;
+     padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+     height: 0;
+     overflow: hidden;
+}
 
-
+.movie-wrap iframe {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+}
 
 
 
